--- a/index.html
+++ b/index.html
@@ -20,107 +20,31 @@
      </header>
 </body>
 <section2>
-     <h2>OBJETIVOS</h2>
-          <h4>Objetivo General</h4>
-               <p>Desarrollar e implementar un sistema de parqueadero automatizado vertical que optimice el uso del espacio, mejore la eficiencia operativa y garantice la seguridad de los vehículos y usuarios, ofreciendo una solución innovadora y sostenible para el estacionamiento en áreas urbanas de alta densidad.</p>
-          <h4>Objetivo Especificos</h4>
-               <p>Diseñar e integrar un sistema de sensores avanzados que permita la detección precisa de vehículos y garantice la seguridad durante el proceso de entrada, almacenamiento y salida de los mismos.
+<h2>OBJETIVOS</h2>
+<h4>Objetivo General</h4>
+<p>Desarrollar e implementar un sistema de parqueadero automatizado vertical que optimice el uso del espacio, mejore la eficiencia operativa y garantice la seguridad de los vehículos y usuarios, ofreciendo una solución innovadora y sostenible para el estacionamiento en áreas urbanas de alta densidad.</p>
+<h4>Objetivo Especificos</h4>
+<p>Diseñar e integrar un sistema de sensores avanzados que permita la detección precisa de vehículos y garantice la seguridad durante el proceso de entrada, almacenamiento y salida de los mismos.
 <br></br>
-     Desarrollar un software de control automatizado que gestione de forma eficiente la asignación de espacios, el movimiento de las plataformas y la interacción con los usuarios mediante interfaces amigables.
+Desarrollar un software de control automatizado que gestione de forma eficiente la asignación de espacios, el movimiento de las plataformas y la interacción con los usuarios mediante interfaces amigables.
 <br></br>
-     Implementar medidas de seguridad y monitoreo continuo a través de sensores de proximidad, cámaras y sistemas de diagnóstico, que minimicen riesgos de accidentes y optimicen el mantenimiento preventivo del sistema.
-</p>
-                    
-  <h4>Definicion.</h4>
+Implementar medidas de seguridad y monitoreo continuo a través de sensores de proximidad, cámaras y sistemas de diagnóstico, que minimicen riesgos de accidentes y optimicen el mantenimiento preventivo del sistema.
+</p>                    
+<h4>Descripcion Proyecto.</h4>
 <p>Como idea para nuestro proyecto hemos decidido mejorar los sistemas de aparcamiento de coches de una forma más viable, el cual será una torre en especie de ruleta la cual donde anteriormente se estacionaban dos vehículos podremos estacionar de 8 hasta 12 vehículos a la vez, con esto buscamos por medio de las nuevas tecnologías hacer de un parqueadero más ergonómico y eficiente. Que tenga menos impacto en la congestión vial, que brinde más seguridad, más agilidad y eficiencia al momento de parquear.</p>
 <img src="Imagenes/Parqueadero.png"width=100px height="200" alt=""><br></p>
 <h4>Justificacion.</h4>
 <p>En las grandes ciudades colombianas, el crecimiento acelerado del parque automotor y la falta de espacio para nuevas infraestructuras de estacionamiento están generando serios desafíos para la movilidad urbana. Ciudades como Bogotá, Medellín y Cali enfrentan problemas de congestión vehicular, escasez de lugares para estacionar y ocupación desmedida de terrenos en zonas comerciales y residenciales. Estos factores han impulsado la búsqueda de soluciones innovadoras que optimicen el uso del espacio y mejoren la eficiencia en la gestión del estacionamiento.
-<br>
 Una de las soluciones más prometedoras es la implementación de parqueaderos automatizados verticales, una tecnología avanzada que utiliza sistemas automáticos para almacenar vehículos en estructuras de varios pisos, aprovechando al máximo el espacio vertical en lugar de horizontal. Este tipo de parqueadero representa un cambio radical frente a los tradicionales estacionamientos de superficie y ofrece una alternativa más eficiente, ecológica y rentable en comparación con otros modelos.</p>
-<br>
-<h4>Marco Teorico 1.</h4>
-<p>Crear un parqueadero automatizado vertical ofrece varias ventajas:
-     <br>
--Ahorro de espacio: Utiliza el espacio de manera eficiente, permitiendo el estacionamiento de más vehículos en áreas reducidas.
-     <br>
--Reducción de costos operativos: Disminuye la necesidad de personal y mejora la gestión del espacio.
-       <br>
--Mayor seguridad: Minimiza el riesgo de robo o daño al vehículo, ya que los autos están resguardados y no expuestos.
-       <br>
--Sostenibilidad: Promueve el uso de energía eléctrica y puede integrar sistemas de carga para vehículos eléctricos.
-       <br>
--Mejora la experiencia del usuario: Facilita el acceso y reduce el tiempo de búsqueda de estacionamiento.
-       <br>
--Valor añadido: Aumenta la rentabilidad del inmueble y puede atraer a inquilinos o clientes que valoran la comodidad.
-       <br>
-El desarrollo de parqueaderos automatizados verticales ha avanzado significativamente en los últimos años. Aquí hay algunas tendencias y características actuales:
-       <br>
--Tecnología avanzada: Se están utilizando sistemas de inteligencia artificial y machine learning para optimizar la gestión del espacio y mejorar la eficiencia operativa.
-  <br>
--Sostenibilidad: Muchos nuevos diseños integran paneles solares y sistemas de carga para vehículos eléctricos, alineándose con las tendencias de movilidad sostenible.
-  <br>
--Conectividad: Los parqueaderos están cada vez más interconectados con aplicaciones móviles, permitiendo a los usuarios reservar espacios, realizar pagos y recibir notificaciones en tiempo real.
-  <br>
--Eficiencia energética: Se están implementando sistemas de iluminación LED y gestión de energía para reducir el consumo.
-  <br>
--Expansión global: Ciudades de todo el mundo, especialmente en Asia y Europa, están adoptando estos sistemas para abordar problemas de congestión y escasez de espacio.
-  <br>
--Regulaciones: Cada vez más gobiernos están promoviendo o incentivando la construcción de estos sistemas como parte de sus políticas urbanas.</p>
-<h4>Marco Teorico 2.</h4>
-<p>La historia del parqueadero automatizado vertical comienza en la primera mitad del siglo XX, cuando la necesidad de maximizar el espacio urbano se hizo evidente en las ciudades en crecimiento.
-  <br>
--Años 1920-1930: Los primeros sistemas de estacionamiento mecánico fueron desarrollados en EE. UU. y Europa. Se utilizaban elevadores para mover vehículos entre niveles.
-  <br>
--Años 1960-1970: La tecnología mejoró con la introducción de sistemas más avanzados, que permitían una mayor capacidad y eficiencia.
-  <br>
--Años 1980-1990: La automatización se expandió gracias a la electrónica y la robótica, dando lugar a sistemas completamente automatizados que no requerían intervención humana.
-  <br>
--Siglo XXI: La demanda de soluciones sostenibles y eficientes ha impulsado el desarrollo de parques de estacionamiento verticales automatizados en muchas ciudades del mundo, incorporando tecnologías inteligentes y de energía renovable.
-  <br>
-Hoy en día, estos sistemas se están adoptando en proyectos arquitectónicos innovadores, contribuyendo a resolver el problema del espacio en entornos urbanos.
+<h4>Marco Teorico.</h4>
+<p>
 </p>
 <h4>Cumplimiento Normarivo.</h4>
-     <p>Para que un parqueadero automatizado vertical cumpla con la normativa legal vigente en Colombia, debe considerar varios aspectos:
-<br>
--Normativas de construcción: Debe cumplir con el Código Nacional de Construcción y las normas urbanísticas locales, que incluyen aspectos de diseño, accesibilidad y seguridad.
-<br>
--Regulación de parqueaderos: Debe adherirse a las normas específicas de parqueaderos, como las establecidas por el Ministerio de Transporte y las alcaldías, que regulan el número de espacios, dimensiones mínimas y señalización.
-<br>
--Seguridad: Implementar medidas de seguridad, como sistemas de control de acceso, cámaras de vigilancia y alarmas, para proteger tanto los vehículos como a los usuarios.
-<br>
--Accesibilidad: Garantizar que los usuarios, incluidos aquellos con discapacidades, tengan acceso adecuado, siguiendo la normativa sobre accesibilidad.
-<br>
--Impacto ambiental: Considerar regulaciones relacionadas con el impacto ambiental y la sostenibilidad, incluyendo el manejo de aguas lluvias y el uso eficiente de energía.
-<br>
--Permisos y licencias: Obtener los permisos de funcionamiento necesarios, que pueden incluir licencias ambientales, de construcción y de uso de suelo.
-<br>
-requisitos normativos estipulados por el código de policía, articulo 90 ley 1801 de 2016.
-<br>
-1. Constitución de póliza de responsabilidad civil extra-contractual, para la protección de los bienes depositados y las personas. En el recibo de deposito del vehículo se informara el numero de la póliza, compañía aseguradora y el procedimiento de reclamación.
-<br>
-2. Expedir recibo de deposito del vehículo al momento del ingreso, en el que se consigne el numero de placa del vehículo y la hora de ingreso.
-<br>
-3. Ofrecer al conductor del vehículo la opción de relacionar bienes adicionales al que deja en deposito.
-<br>
-4. Cumplir con las tarifas establecidas por la autoridad distrital o municipal.
-<br>
-5. Cumplir los requisitos de carácter sanitario, ambiental  y de transito.
-<br>
-6. Contar con seguridad permanente y de acuerdo con la clasificación del estacionamiento o parqueadero, con acomodadores uniformados con licencia de conducción y con acomodadores uniformados con licencia de conducción y con credenciales que faciliten su identificación por parte de los usuarios.
-<br>
-7. Señalizar debidamente la entrada y la salida de vehículos y demarcar el espacio que ocupa cada vehículo y los corredores de giro y movilidad.
-<br>
-8.  Cumplir las exigencias para el desarrollo de actividades económicas.
-<br>
-9. Adecuar o habilitar plazas para el estacionamiento de bicicletas.         
-     </p>
+<p></p>
 </section2>
 
-
-       <footer>
-     <div class="footer-text">
-     <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
-     </div>
-     
+<footer>
+<div class="footer-text">
+<p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
+</div>
      </footer>
