--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@ Implementar medidas de seguridad y monitoreo continuo a través de sensores de p
 <h4>Justificacion.</h4>
 <p>En las grandes ciudades colombianas, el crecimiento acelerado del parque automotor y la falta de espacio para nuevas infraestructuras de estacionamiento están generando serios desafíos para la movilidad urbana. Ciudades como Bogotá, Medellín y Cali enfrentan problemas de congestión vehicular, escasez de lugares para estacionar y ocupación desmedida de terrenos en zonas comerciales y residenciales. Estos factores han impulsado la búsqueda de soluciones innovadoras que optimicen el uso del espacio y mejoren la eficiencia en la gestión del estacionamiento.
 Una de las soluciones más prometedoras es la implementación de parqueaderos automatizados verticales, una tecnología avanzada que utiliza sistemas automáticos para almacenar vehículos en estructuras de varios pisos, aprovechando al máximo el espacio vertical en lugar de horizontal. Este tipo de parqueadero representa un cambio radical frente a los tradicionales estacionamientos de superficie y ofrece una alternativa más eficiente, ecológica y rentable en comparación con otros modelos.</p>
-<h4>Marco Teorico.</h4>
-<p>
+<h4>Estidio de casos.</h4>
+<p>En Alemania, empresas como WÖHR y Volkswagen Group han implementado sistemas de estacionamiento automatizados, algunos de los cuales integran tecnología de carga para vehículos eléctricos, lo que también ha sido objeto de investigación.
+En China, debido a la alta densidad poblacional y la expansión urbana, varios proyectos de estacionamiento automatizado vertical están en desarrollo, tanto en grandes ciudades como Shanghái y Beijing.
+</p>
+<p>En Colombia y Argentina, algunos estudios de viabilidad han comenzado a explorar el potencial de los parques de estacionamiento automatizados verticales. Se han realizado investigaciones sobre el impacto de la automatización en la reducción de la congestión vehicular y el uso del suelo en ciudades como Bogotá y Buenos Aires.
 </p>
 <h4>Cumplimiento Normarivo.</h4>
 <p></p>
