--- a/index.html
+++ b/index.html
@@ -43,7 +43,17 @@ En China, debido a la alta densidad poblacional y la expansión urbana, varios p
 <p>En Colombia y Argentina, algunos estudios de viabilidad han comenzado a explorar el potencial de los parques de estacionamiento automatizados verticales. Se han realizado investigaciones sobre el impacto de la automatización en la reducción de la congestión vehicular y el uso del suelo en ciudades como Bogotá y Buenos Aires.
 </p>
 <h4>Cumplimiento Normarivo.</h4>
-<p></p>
+<p>Reglamentación sobre Infraestructura Tecnológica
+<br></br>
+Dado que se trata de un sistema de tecnología automatizada, el parqueadero vertical debe cumplir con las normas técnicas establecidas para este tipo de tecnologías, las cuales incluyen aspectos de seguridad electrónica, accesibilidad digital, y mantenimiento de equipos.
+Normas de Ciberseguridad: El sistema debe garantizar que los datos de los usuarios (como los relacionados con el acceso y la operación del parqueadero) sean gestionados de manera segura. Se deben cumplir con las normativas colombianas relacionadas con la protección de datos personales (Ley 1581 de 2012 y sus reglamentos).
+Certificación de Equipos: Los equipos y tecnologías involucrados en el sistema (elevadores, sensores, plataformas, etc.) deben estar certificados bajo normas internacionales o nacionales de calidad y seguridad.
+<br></br>
+<br></br>
+Regulaciones de Estacionamiento Inteligente
+<br></br>
+Las ciudades de Colombia están avanzando hacia la implementación de soluciones de movilidad inteligente que incluyen sistemas de parqueo inteligente y la integración de tecnologías automatizadas. Es importante que el parqueadero vertical se alinee con las regulaciones que fomentan el uso eficiente del espacio y la optimización de la movilidad en la ciudad.
+</p>
 </section2>
 
 <footer>
