--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@ Regulaciones de Estacionamiento Inteligente
 <br></br>
 Las ciudades de Colombia están avanzando hacia la implementación de soluciones de movilidad inteligente que incluyen sistemas de parqueo inteligente y la integración de tecnologías automatizadas. Es importante que el parqueadero vertical se alinee con las regulaciones que fomentan el uso eficiente del espacio y la optimización de la movilidad en la ciudad.
 </p>
+<h2>Ejemplos actuales en Colombia y el mundo.</h2>
+<p>
+En la capital colombiana, se han realizado estudios para analizar la viabilidad de los parqueaderos automatizados verticales. Bogotá enfrenta problemas de congestión vehicular y una escasez de espacios de estacionamiento, especialmente en zonas comerciales y residenciales de alta demanda, como en el norte de la ciudad y Chapinero. Algunos proyectos urbanos han considerado la integración de sistemas automatizados para maximizar el uso del espacio. Por ejemplo, un grupo de arquitectos e ingenieros colombianos está trabajando en el diseño de parqueaderos automatizados en proyectos de infraestructura inteligente para nuevas construcciones comerciales y residenciales en el área metropolitana de Bogotá   
+<br></br>
+Japón es uno de los países pioneros en el desarrollo de parqueaderos automatizados verticales. Desde la década de 1970, el país ha liderado la innovación en sistemas de estacionamiento automáticos debido a su alta densidad urbana, la escasez de espacio y la alta demanda de estacionamientos. Ciudades como Tokio y Osaka han implementado con éxito estos sistemas, con más de 3.000 instalaciones en todo el país. Un ejemplo destacado es el sistema "Park24", que utiliza tecnología avanzada para el estacionamiento automático de vehículos en espacios de hasta 10 pisos, con una eficiencia que permite almacenar hasta 60 vehículos en el espacio que normalmente ocuparían 10.
+</p>
 </section2>
 
 <footer>
