--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@ En la capital colombiana, se han realizado estudios para analizar la viabilidad 
 <br></br>
 Japón es uno de los países pioneros en el desarrollo de parqueaderos automatizados verticales. Desde la década de 1970, el país ha liderado la innovación en sistemas de estacionamiento automáticos debido a su alta densidad urbana, la escasez de espacio y la alta demanda de estacionamientos. Ciudades como Tokio y Osaka han implementado con éxito estos sistemas, con más de 3.000 instalaciones en todo el país. Un ejemplo destacado es el sistema "Park24", que utiliza tecnología avanzada para el estacionamiento automático de vehículos en espacios de hasta 10 pisos, con una eficiencia que permite almacenar hasta 60 vehículos en el espacio que normalmente ocuparían 10.
 </p>
+<h4>Ingienerias Implementadas</h4>
+<p>
+La ingeniería mecánica es una de las disciplinas clave en el diseño de un sistema de estacionamiento automatizado. Esta disciplina se encarga de diseñar los mecanismos y sistemas que permiten el movimiento de los vehículos dentro del estacionamiento. Algunos de los componentes relevantes incluyen: Sistemas de elevacion y Sistemas de trasporte.
+<br></br>.
+La ingieneria electronica y de control juegan un papel crucial en la operación eficiente del parqueadero. Algunos de los aspectos clave incluyen: Sensores, Sistemas de control automatico y Redes de comunicacion
+</p>
 </section2>
+
 
 <footer>
 <div class="footer-text">
