--- a/validacion_formulario_contacto_basico.html
+++ b/validacion_formulario_contacto_basico.html
@@ -2,7 +2,7 @@
      <img src="Imagenes/logo u cundinamarca.png"alt=""class="log">
  </div>
      <main>
-         <h2>  Glosario Pensamiento Sistematico</h2> 
+         <h2> Formulario</h2> 
       <h4> Autores: Brayan Stiven Gonzalez Gomez, Laura Vanesa Farafan Mayorga</h4> 
      </main>
 <body>
@@ -36,7 +36,7 @@
     <script type="text/javascript" src="js/funciones_validacion_formularios_basico.js"></script>    
 
 </head>
-<body>
+<body1>
     <hr>
     <!-- mostramos imágenes alusivas al ejercicio -->
     <img id="img1" src="Imagenes/clipart-javascript1-140x100.png" />
@@ -115,7 +115,7 @@
         <! input type="reset" value="Reiniciar datos" />   
         <input type="button" value="Reiniciar datos" onclick="resetearDatos()">
     </form>
-</body>
+</body2>
     
 </html>
 
