--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <h4> Autores: Brayan Stiven Gonzalez Gomez, Laura Vanesa Farafan Mayorga</h4> 
      </main>
 
-<body>
+<body2>
 <header>                    
                <nav>
                     <a href="index.html" class="nav-link">Inicio</a>
@@ -18,7 +18,7 @@
                </nav>
                <link rel="stylesheet" href="css/estilos.css">
      </header>
-</body>
+</body2>
 <section2>
 <h2>OBJETIVOS</h2>
 <h4>Objetivo General</h4>
