--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <h4> Autores: Brayan Stiven Gonzalez Gomez, Laura Vanesa Farafan Mayorga</h4> 
      </main>
 
-<body2>
+<body>
 <header>                    
                <nav>
                     <a href="index.html" class="nav-link">Inicio</a>
@@ -18,7 +18,7 @@
                </nav>
                <link rel="stylesheet" href="css/estilos.css">
      </header>
-</body2>
+</body>
 <section2>
 <h2>OBJETIVOS</h2>
 <h4>Objetivo General</h4>
@@ -65,7 +65,8 @@ La ingeniería mecánica es una de las disciplinas clave en el diseño de un sis
 <br></br>
 La ingieneria electronica y de control juegan un papel crucial en la operación eficiente del parqueadero. Algunos de los aspectos clave incluyen: Sensores, Sistemas de control automatico y Redes de comunicacion
 </p>
-      
+<h4>Encuentas</h4>
+
 </section2>
 
 
