--- a/validacion_formulario_contacto_basico.html
+++ b/validacion_formulario_contacto_basico.html
@@ -16,7 +16,26 @@
          </nav>
          <link rel="stylesheet" href="css/estilos.css">
 </header>
-</body1>		
+</body1>	
+
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <!-- <meta http-equiv="content-type" content="text/html"; charset="utf-8"> -->
+    <meta http-equiv="content-type" content="text/html"; charset="iso-8859-1"> 
+    <meta name="description" content="Ejercicios para validación de datos">
+    <meta name="keyworks" content="validar campos, expresiones regulares">
+    <title>EJERCICIO VALIDADOR DATOS FORMULARIO</title>
+
+    <style type="text/css">
+        body {background-color:lightcyan; font-family: sans-serif;}
+        label {color: maroon; display:block; padding:5px;}
+	    input {margin:10px;}
+    </style>
+
+    <script type="text/javascript" src="js/funciones_validacion_formularios_basico.js"></script>    
+
+</head>
 
 <body>
     <hr>
