--- a/validacion_formulario_contacto_basico.html
+++ b/validacion_formulario_contacto_basico.html
@@ -45,7 +45,7 @@
     <br><br>
     <h2>Formulario: DATOS PERSONALES</h2><hr><br>
     <! ----------------------------------------- -->  
-    <form name="miniformulario" class="formulario" method="get" onsubmit="return validarDatos()" action="pagina2.php">
+    <form name="miniformulario" class="formulario" method="get" onsubmit="return validarDatos()" action="pagina2.html">
         
         <label for="nombre">Nombre</label>   
         <input type="text" id="nombre" name="nombre" placeholder="ingrese el Nombre..."/><img width="20" height="20"  style='visibility: hidden;' /><br/>
