--- a/index.html
+++ b/index.html
@@ -65,7 +65,16 @@ La ingeniería mecánica es una de las disciplinas clave en el diseño de un sis
 <br></br>
 La ingieneria electronica y de control juegan un papel crucial en la operación eficiente del parqueadero. Algunos de los aspectos clave incluyen: Sensores, Sistemas de control automatico y Redes de comunicacion
 </p>
-<h4>Encuentas</h4>
+<h4>Encuentas</h4
+<img src="Imagenes/Picture20.png"width=300px height="200px" alt="">
+<br></br>
+<img src="Imagenes/Picture20.png"width=300px height="200px" alt="">
+<br></br>
+<p>
+El propósito de implementar una encuesta de satisfacción dentro del proyecto es obtener retroalimentación directa de los usuarios sobre la funcionalidad, la comodidad y la seguridad del sistema automatizado. Este proceso de recopilación de opiniones y percepciones permite identificar áreas de mejora y realizar ajustes que contribuyan a la mejora continua del sistema. Además, el análisis de los datos obtenidos a través de la encuesta proporciona un panorama claro de la aceptación y efectividad del proyecto, lo que es esencial para validar los objetivos de optimización y eficacia.
+El uso de la encuesta de satisfacción también ayuda a asegurar la sostenibilidad del proyecto, ya que permite medir el impacto en la experiencia del usuario y adaptar las funcionalidades a las expectativas cambiantes. De esta manera, la encuesta actúa no solo como un medio para evaluar el desempeño inicial, sino también como un indicador a largo plazo de la viabilidad y éxito del proyecto.
+</p>
+<h4>Diagramas de pescado</h4>
 
 </section2>
 
