--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ En China, debido a la alta densidad poblacional y la expansión urbana, varios p
 </p>
 <p>En Colombia y Argentina, algunos estudios de viabilidad han comenzado a explorar el potencial de los parques de estacionamiento automatizados verticales. Se han realizado investigaciones sobre el impacto de la automatización en la reducción de la congestión vehicular y el uso del suelo en ciudades como Bogotá y Buenos Aires.
 </p>
-<h4>Cumplimiento Normarivo.</h4>
+<h4>Cumplimiento Normativo.</h4>
 <p>Reglamentación sobre Infraestructura Tecnológica
 <br></br>
 Dado que se trata de un sistema de tecnología automatizada, el parqueadero vertical debe cumplir con las normas técnicas establecidas para este tipo de tecnologías, las cuales incluyen aspectos de seguridad electrónica, accesibilidad digital, y mantenimiento de equipos.
@@ -65,10 +65,10 @@ La ingeniería mecánica es una de las disciplinas clave en el diseño de un sis
 <br></br>
 La ingieneria electronica y de control juegan un papel crucial en la operación eficiente del parqueadero. Algunos de los aspectos clave incluyen: Sensores, Sistemas de control automatico y Redes de comunicacion
 </p>
-<h4>Encuentas</h4
-<img src="Imagenes/Picture20.png"width=300px height="200px" alt="">
+<h4>Encuestas</h4
+<img src="Imagenes/Encuesta1.png"width=300px height="200px" alt="">
 <br></br>
-<img src="Imagenes/Picture20.png"width=300px height="200px" alt="">
+<img src="Imagenes/Encuesta2.png"width=300px height="200px" alt="">
 <br></br>
 <p>
 El propósito de implementar una encuesta de satisfacción dentro del proyecto es obtener retroalimentación directa de los usuarios sobre la funcionalidad, la comodidad y la seguridad del sistema automatizado. Este proceso de recopilación de opiniones y percepciones permite identificar áreas de mejora y realizar ajustes que contribuyan a la mejora continua del sistema. Además, el análisis de los datos obtenidos a través de la encuesta proporciona un panorama claro de la aceptación y efectividad del proyecto, lo que es esencial para validar los objetivos de optimización y eficacia.
