--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ La ingeniería mecánica es una de las disciplinas clave en el diseño de un sis
 La ingieneria electronica y de control juegan un papel crucial en la operación eficiente del parqueadero. Algunos de los aspectos clave incluyen: Sensores, Sistemas de control automatico y Redes de comunicacion
 </p>
 <h4>Encuestas</h4
-<img src="Imagenes/Encuesta1.png"width=300px height="200px" alt="">
+<img src="Imagenes/Encuesta1.png.png"width=300px height="200px" alt="">
 <br></br>
-<img src="Imagenes/Encuesta2.png"width=300px height="200px" alt="">
+<img src="Imagenes/Encuesta2.png.png"width=300px height="200px" alt="">
 <br></br>
 <p>
 El propósito de implementar una encuesta de satisfacción dentro del proyecto es obtener retroalimentación directa de los usuarios sobre la funcionalidad, la comodidad y la seguridad del sistema automatizado. Este proceso de recopilación de opiniones y percepciones permite identificar áreas de mejora y realizar ajustes que contribuyan a la mejora continua del sistema. Además, el análisis de los datos obtenidos a través de la encuesta proporciona un panorama claro de la aceptación y efectividad del proyecto, lo que es esencial para validar los objetivos de optimización y eficacia.
