--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ El propósito de implementar una encuesta de satisfacción dentro del proyecto e
 El uso de la encuesta de satisfacción también ayuda a asegurar la sostenibilidad del proyecto, ya que permite medir el impacto en la experiencia del usuario y adaptar las funcionalidades a las expectativas cambiantes. De esta manera, la encuesta actúa no solo como un medio para evaluar el desempeño inicial, sino también como un indicador a largo plazo de la viabilidad y éxito del proyecto.
 </p>
 <h4>Diagramas de pescado</h4>
+<p>Causa efecto 1</p>
+     <img src="Imagenes/Causa1.png.png"width=300px height="200px" alt="">
+<p>Causa efecto 2</p>
+     <img src="Imagenes/Causa2.png.png"width=300px height="200px" alt="">
+<p>Causa efecto 3</p>
+     <img src="Imagenes/Causa3.png.png"width=300px height="200px" alt="">
 
 </section2>
 
