--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@ El uso de la encuesta de satisfacción también ayuda a asegurar la sostenibilid
 </p>
 <h4>Diagramas de pescado</h4>
 <p>Causa efecto 1</p>
-     <img src="Imagenes/Causa1.png.png"width=300px height="200px" alt="">
+     <img src="Imagenes/Causa1.png"width=300px height="200px" alt="">
 <p>Causa efecto 2</p>
-     <img src="Imagenes/Causa2.png.png"width=300px height="200px" alt="">
+     <img src="Imagenes/Causa2.png"width=300px height="200px" alt="">
 <p>Causa efecto 3</p>
-     <img src="Imagenes/Causa3.png.png"width=300px height="200px" alt="">
+     <img src="Imagenes/Causa3.png"width=300px height="200px" alt="">
 
 </section2>
 
