--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@ El uso de la encuesta de satisfacción también ayuda a asegurar la sostenibilid
      <img src="Imagenes/Causa2.png"width=300px height="200px" alt="">
 <p>Causa efecto 3</p>
      <img src="Imagenes/Causa3.png"width=300px height="200px" alt="">
+<h4>Diagramas de procesos</h4>
+     <img src="Imagenes/Diagrama.png"width=300px height="200px" alt="">
+<h4>Boceto diseño final</h4>
+     <img src="Imagenes/Bocetofinal.png"width=300px height="200px" alt="">
+<h4>Boceto ingieneria estructura</h4>
+     <img src="Imagenes/Bocetoestructura.png"width=300px height="200px" alt="">
 
 </section2>
 
