--- a/pagina2.html
+++ b/pagina2.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>WEB en construcción</title></head><body><br>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>WEB en construcciÃ³n</title></head><body><br>
 <br>
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
       <td style="vertical-align: top;">
-      <div style="text-align: center;"><big style="font-style: italic;"><big><big><big><span style="font-family: Arial Black; color: rgb(51, 51, 255);">... Discúlpenos ....</span></big></big></big></big><br>
+      <div style="text-align: center;"><big style="font-style: italic;"><big><big><big><span style="font-family: Arial Black; color: rgb(51, 51, 255);">... DiscÃºlpenos ....</span></big></big></big></big><br>
       <big><big style="font-style: italic;"><span style="color: rgb(204, 102, 204);">
-Este sitio WEB&nbsp; está&nbsp; en construcción</span></big></big><br>
+Este sitio WEB&nbsp; estÃ¡&nbsp; en construcciÃ³n</span></big></big><br>
       </div>
 
       <br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center;"><img style="width: 332px; height: 310px;" alt="en construcción" title="sitio web en construcción" src="imagenes/construccion_web.jpg"><br>
+      <td style="vertical-align: top; text-align: center;"><img style="width: 332px; height: 310px;" alt="en construcciÃ³n" title="sitio web en construcciÃ³n" src="Imagenes/construccion_web.png"><br>
       </td>
     </tr>
   </tbody>
 </table>
-<div style="text-align: center;">Próximamente estaremos a su disposición....<br>
+<div style="text-align: center;">PrÃ³ximamente estaremos a su disposiciÃ³n....<br>
 gracias por visitarnos<br>
 
 
