--- a/pagina2.html
+++ b/pagina2.html
@@ -15,7 +15,7 @@ Este sitio WEB&nbsp; está&nbsp; en construcción</span></big></big><br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center;"><img style="width: 332px; height: 310px;" alt="en construcción" title="sitio web en construcción" src="Imagenes/construccion_web.png"><br>
+      <td style="vertical-align: top; text-align: center;"><img style="width: 332px; height: 310px;" alt="en construcción" title="sitio web en construcción" src="Imagenes/construccion_web.jpg"><br>
       </td>
     </tr>
   </tbody>
